--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "compare": "node compare.js"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "fs-extra": "^11.1.0",
     "pixel-diff": "^1.0.0",
